--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SoccerLeagueProject</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="choose_theme_text">Choose theme</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
